labs/yandex-managed-k8s/app/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: httpbin-test
  labels:
    purpose: testing
