labs/yandex-managed-k8s/app/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: httpbin-service
  namespace: httpbin-test
  labels:
    env: test
spec:
  type: ClusterIP
  ports:
    - port: 80
      targetPort: 80
  selector:
    app: httpbin
